# pyspec2openapi

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
examples/: config.yml  out.yml
examples/extra_types/: altair.md  bellatrix.md  deneb.md  phase0.md
pyspec2openapi/: __init__.py  __main__.py  index.py
pyspec2openapi/tests/: example_config.yml  example_specs_out.yml  test_containers.py  test_index.py
